@@ -601,12 +601,12 @@ For example to limit the web interface to localhost only:
      use address 127.0.0.1
      allow myuser:mypassword
 
-I<SSL>, I<PEMFILE> allows to enable SSL for Monit web interface. The
-pemfile holds both the server's private key and certificate. This file
-should be stored in a safe place on the filesystem and should have
-strict permissions, no more than 0700. Please see README.SSL file
-accompanying the software to get more information about certificates
-and generating pem files.
+I<SSL> allows to enable SSL for Monit web interface. Only TLS methods
+are supported. The I<PEMFILE> option holds both the server's private key
+and certificate. This file should be stored in a safe place on the
+filesystem and should have strict permissions, no more than 0700.
+Please see README.SSL file accompanying the software to get more
+information about certificates and generating pem files.
 
 For example:
 
@@ -2403,10 +2403,16 @@ regular stream based socket, UDP is a datagram socket and TCPSSL
 specifies that Monit should use a TCP socket with SSL when
 connecting to a port. The default socket type is TCP. If TCPSSL
 is used you may optionally specify the SSL/TLS protocol to be
-used and the MD5 checksum of the server's certificate. The TCPSSL
-options are:
+used and the MD5 checksum of the server's certificate.
+
+The TCPSSL options are:
 
  TCPSSL [SSLAUTO|SSLV2|SSLV3|TLSV1|TLSV11|TLSV12] [CERTMD5 md5sum]
+
+I<SSLAUTO> defaults will select the method automatically, but note
+that only TLS methods are supported. If you need SSLv2 or SSLv3 you
+have to explicitly select that method using I<SSLV2> or I<SSLV3>
+option.
 
 I<protocol: PROTO(COL) protocol>. Optionally specify the protocol
 Monit should speak when a connection is established. At the
